Finish login/logout

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+daniel:
+  name: Daniel Example
+  email: daniel@example.com
+  password_digest: <%= User.digest('password') %>
